@@ -255,7 +255,7 @@
     background: white;
   }
   #content ul {
-    list-style-image: url("/bullet.png");
+    list-style-image: url("/++framework++plone/classic/img/bullet.png");
     list-style-type: square;
     margin: 0.5em 0 0 1.5em;
   }
@@ -2782,7 +2782,7 @@
     border: 1px solid #dddddd;
     border-color: #666666 #dddddd #dddddd #666666;
     color: black;
-    background: white url("/input_background.png") repeat-x;
+    background: white url("/++framework++plone/classic/img/input_background.png") repeat-x;
     width: 100%;
   }
 
@@ -2793,7 +2793,7 @@
     border-color: #666666 #dddddd #dddddd #666666;
     color: black;
     vertical-align: middle;
-    background: white url("/input_background.png") repeat-x;
+    background: white url("/++framework++plone/classic/img/input_background.png") repeat-x;
     font-size: 1em;
   }
 
@@ -2926,7 +2926,7 @@
     margin-bottom: 1px !important;
     color: black;
     font-size: 90%;
-    background: white url("/search_icon.png") 2px 1px no-repeat;
+    background: white url("/++framework++plone/classic/img/search_icon.png") 2px 1px no-repeat;
     cursor: pointer;
     padding: 1px 1px 1px 19px;
     text-transform: none;
